--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,3 +58,4 @@ add_subdirectory(projects/analysers_templs/tsan_check_templ)
 add_subdirectory(projects/cc_core_and_stl_98_11)
 add_subdirectory(projects/gc_alloc_resources)
 add_subdirectory(projects/tricks)
+add_subdirectory(projects/rt_audio)
