--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,3 +59,4 @@ add_subdirectory(projects/cc_core_and_stl_98_11)
 add_subdirectory(projects/gc_alloc_resources)
 add_subdirectory(projects/tricks)
 add_subdirectory(projects/rt_audio)
+add_subdirectory(projects/cppmove_book)
