WIP: edu extracted

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,7 +57,5 @@ add_subdirectory(projects/analysers_templs/asan_check_templ)
 add_subdirectory(projects/analysers_templs/tsan_check_templ)
 add_subdirectory(projects/cc_core_and_stl_98_11)
 add_subdirectory(projects/gc_alloc_resources)
-add_subdirectory(projects/tricks)
+add_subdirectory(edu/books)
 add_subdirectory(projects/rt_audio)
-add_subdirectory(projects/cppmove_book)
-add_subdirectory(projects/opt_cpp)
