--- a/edu/books/CMakeLists.txt
+++ b/edu/books/CMakeLists.txt
@@ -6,7 +6,6 @@ add_executable(tricks
         sutter_tasks/exception_safety_test.cc
         sutter_tasks/mem_and_resources_6_test.cc
         sutter_tasks/stl_test.cc
-        stephan_t_lavavej/hw_l2.cc
         sean_parent/goal_no_raw_loops_app.cc
         sean_parent/goal_no_raw_ptrs_app.cc
         sean_parent/goal_no_raw_sync_primitives_app.cc
@@ -23,3 +22,7 @@ target_link_libraries(tricks
         ${GTEST_BOTH_LIBRARIES}
         pthread dl m rt
         )
+
+
+add_subdirectory(cppmove_book)
+add_subdirectory(opt_cpp)
