--- a/edu/talks/Makefile
+++ b/edu/talks/Makefile
@@ -4,4 +4,8 @@ all:
 	g++ -S -std=c++17 -O3 jt_perf.cpp
 
 ir:
-	clang -S -std=c++17 -03 -emit-llvm jt_perf.cpp
+	clang++ -S -std=c++17 -O3 -emit-llvm jt_perf.cpp
+
+
+clean:
+	rm -rf *.out *.ll *.s
