--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,3 +54,4 @@ add_subdirectory(projects/analysers_templs/asan_check_templ)
 add_subdirectory(projects/analysers_templs/tsan_check_templ)
 add_subdirectory(projects/cpp_lang)
 add_subdirectory(edu/books)
+add_subdirectory(projects/safe)
