--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,5 +53,6 @@ add_subdirectory(projects/backtrace_and_heap)
 add_subdirectory(projects/analysers_templs/asan_check_templ)
 add_subdirectory(projects/analysers_templs/tsan_check_templ)
 add_subdirectory(projects/cpp_lang)
+add_subdirectory(projects/high_perf)
 add_subdirectory(edu/books)
 add_subdirectory(projects/safe)
