--- a/projects/high_perf/CMakeLists.txt
+++ b/projects/high_perf/CMakeLists.txt
@@ -12,6 +12,8 @@ find_package(benchmark REQUIRED)
 include_directories(${benchmark_INCLUDE_DIRS})
 link_libraries(${benchmark_LIBRARIES} pthread)
 
+include_directories(${CMAKE_SOURCE_DIR}/3rdparty)
+
 set(Boost_USE_STATIC_LIBS OFF)
 set(Boost_USE_MULTITHREADED ON)
 set(Boost_USE_STATIC_RUNTIME OFF)
