--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,4 +51,5 @@ find_package(GTest REQUIRED)
 add_subdirectory(projects/cpp_lang)
 add_subdirectory(projects/high_perf)
 add_subdirectory(edu/books)
+add_subdirectory(edu/fastware)
 add_subdirectory(projects/safe)
