--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "3rdparty/mission-critical-sw-experiments"]
 	path = 3rdparty/mission-critical-sw-experiments
 	url = https://github.com/zaqwes8811/mission-critical-sw-experiments.git
+[submodule "3rdparty/abseil-cpp"]
+	path = 3rdparty/abseil-cpp
+	url = https://github.com/abseil/abseil-cpp.git
