--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,5 +56,7 @@ find_package(GTest REQUIRED)
 add_subdirectory(projects/cpp_lang)
 add_subdirectory(projects/high_perf)
 add_subdirectory(edu/books)
+add_subdirectory(edu/train)
+add_subdirectory(edu/abseil)
 add_subdirectory(edu/fastware)
 add_subdirectory(projects/safe)
