--- a/edu/books/cpptemplates_book/CMakeLists.txt
+++ b/edu/books/cpptemplates_book/CMakeLists.txt
@@ -10,4 +10,6 @@ target_link_libraries(cpptemplates_book
         ${GTEST_BOTH_LIBRARIES}
         pthread dl m rt
         )
+
+# No -fconcepts-ts
 target_compile_options(cpptemplates_book PRIVATE "-fconcepts")
